[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/spr_feeling_minions/feeling_minions1.png" type="Texture" id=1]
[ext_resource path="res://sprites/spr_feeling_minions/feeling_minions4.png" type="Texture" id=2]
[ext_resource path="res://sprites/spr_feeling_minions/feeling_minions3.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_feeling_minions/feeling_minions2.png" type="Texture" id=4]
[ext_resource path="res://areas/area_detect_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/entity_feeling_minion/entity_feeling_minion.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 130.152

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.33852, 7.74296 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.21869, 2.26064 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 200, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="entity_feeling_minion" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource( 6 )

[node name="area_detect_player" parent="." instance=ExtResource( 5 )]

[node name="col_detect_player" type="CollisionShape2D" parent="area_detect_player"]
shape = SubResource( 1 )

[node name="area_attack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="col_area_attack" type="CollisionShape2D" parent="area_attack"]
shape = SubResource( 2 )

[node name="spr_feeling_minion" type="AnimatedSprite" parent="."]
position = Vector2( 0.365488, 0 )
frames = SubResource( 3 )
animation = "run"

[node name="col_feeling_minion" type="CollisionShape2D" parent="."]
position = Vector2( -0.219294, 5.70162 )
shape = SubResource( 4 )

[node name="particle_entity_feeling_minion_death" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 5 )
[connection signal="body_entered" from="area_attack" to="." method="_on_area_attack_body_entered"]
